--- a/test/fixtures/job_statuses.yml
+++ b/test/fixtures/job_statuses.yml
@@ -1,11 +1,7 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  user_id: 
-  job_id: 
-  job_status_id: 
+  description: MyString
 
 two:
-  user_id: 
-  job_id: 
-  job_status_id: 
+  description: MyString
